--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,19 +2,20 @@
     <nav class="navbar container">
         <a href="index.html" class="nav-link">LOGO</a>
         <ul class="nav-list">
-            <li class="nav-item">
-                <a href="home.html" class="nav-link">HOME</a>
-            </li>
-            <li class="nav-item">
-                <a href="/" class="nav-link">FILIERES</a>
-            </li>
-            <li class="nav-item">
-                <a href="/contact" class="nav-link">CONTACT</a>
-            </li>
-            <li class="nav-item">
-                <a href="/login" class="nav-link">LOGIN</a>
-            </li>
-            <div class="active"></div>
+                <li  class="nav-item">
+                    <a  href="/Acceuil" class="nav-link">Acceuil</a>
+                </li>
+                <li  class="nav-item">
+                    <a  href="/" class="nav-link">filières</a>
+                </li>
+                <li  class="nav-item">
+                    <a   href="/contact" class="nav-link">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/login" class="nav-link">Connecter</a>
+                </li>
+
+             
         </ul>
     </nav>
 </header>	
