--- a/src/app/components/filieres/filieres.component.css
+++ b/src/app/components/filieres/filieres.component.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
   }
   html {
-    font-family: "Poppins", sans-serif;
+    font-family:'Poppins', sans-serif;
     font-size: 10px;
   }
   section {
@@ -109,7 +109,7 @@
     margin-right: 0;
     font-weight: bold;
     text-align: center;
-    font-family:"Poppins", sans-serif;
+    font-family:'Poppins', sans-serif;
 
   }
  
