--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,66 +1,33 @@
-/* General styles */
-*,
 *::before,
 *::after {
 	padding: 0;
-    margin: -0.5rem ;
 	box-sizing: border-box;
 }
-html {
-	font-size: 62.5%;
+.navbar-light .navbar-nav .nav-link
+{
+    color: white;
 }
-header{
-	font-family: 'Poppins', sans-serif;
-	font-size: 1.3rem;
-	color: #fff;
-	background-color: #066aa4ba;
-}
-a {
-	text-decoration: none;
-	color: inherit;
-}
-/* General styles end*/
+.navbar-light .navbar-nav .nav-link.active-link
+{
+    color: black;
+    text-decoration: underline;
+	font-weight: bold;
 
-.container {
+}
+.container-fluid{
+	background-color: rgb(243, 141, 7);
+	font-size: 20px;
+	font-family:'Poppins', sans-serif;
+	height: 5%;
+	padding-block: 0.5rem;
+	display: flex;
 	max-width: 98rem;
 	margin-inline: auto;
 	padding-inline: 1.5rem;
-}
-.navbar {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding-block: 1.5rem;
-}
-.nav-list {
-	position: relative;
-	display: flex;
-	list-style: none;
-}
-.nav-item {
-	min-width: 10rem;
-	text-align: center;
-	padding-block: 1rem;
-}
-.nav-link {
-	text-transform: uppercase;
-}
-.active {
-	position: absolute;
-	bottom: -1rem;
-	height: 2px;
-	width: 10rem;
-	background-color: #fff;
-	transition: transform 0.25s;
-}
-.nav-item:nth-child(2):hover ~ .active {
-	transform: translateX(10rem);
-}
-.nav-item:nth-child(3):hover ~ .active {
-	transform: translateX(20rem);
-}
-.nav-item:nth-child(4):hover ~ .active {
-	transform: translateX(30rem);
-}
+	margin-top: -0.5%;
 
-
+}
+a:hover{
+	font-style: italic;
+	font-weight: bold;
+}
