--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,21 +1,38 @@
-<header>
-    <nav class="navbar container">
-        <a href="index.html" class="nav-link">LOGO</a>
-        <ul class="nav-list">
-                <li  class="nav-item">
-                    <a  href="/Acceuil" class="nav-link">Acceuil</a>
-                </li>
-                <li  class="nav-item">
-                    <a  href="/" class="nav-link">filières</a>
-                </li>
-                <li  class="nav-item">
-                    <a   href="/contact" class="nav-link">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a href="/login" class="nav-link">Connecter</a>
-                </li>
-
-             
-        </ul>
-    </nav>
-</header>	
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" routerLink="">LOGO</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                    <a class="nav-link" routerLink="/Acceuil"  routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">ACCEUIL</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" routerLink="/" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">FILIERES</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" routerLink="/contact" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">CONTACTE</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" routerLink="/login" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">CONNECTER</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
+    
+</body>
+</html>
