--- a/src/app/components/acceuil/acceuil.component.html
+++ b/src/app/components/acceuil/acceuil.component.html
@@ -35,16 +35,16 @@
               <div class="follow">
                 <div class="icons">
                     <a href="#" class="icon icon--instagram">
-                      <i class="ri-instagram-line"></i>
+                      <i class="bi bi-instagram"></i>
                     </a>
                     <a href="#" class="icon icon--twitter">
-                      <i class="ri-twitter-line"></i>
+                      <i class="bi bi-twitter"></i>
                     </a>
                     <a href="#" class="icon icon--facebook">
-                        <i class="fab fa-facebook-f"></i>
+                      <i class="bi bi-facebook"></i>
                     </a>
                     <a href="#" class="icon icon--github">
-                      <i class="ri-github-line"></i>
+                      <i class="bi bi-github"></i>
                     </a>
                   </div>
                 </div>
