--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,121 +1,132 @@
 
-main{
-    min-height: 90.5vh;
-  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /*background-image: url("assets/photos/p3.jpeg") ;*/
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
-.form-box
-{
-    width:400px;
-	height:550px;
-	position:relative;
-	margin: 30% auto;
-	background:transparent;
-	padding: 10px;
-    overflow: hidden;
-	backdrop-filter: blur(20px);
-	margin-top: 12.8%;
+html,body{
+  display: grid;
+  height: 100%;
+  width: 100%;
+  place-items: center;
+  background: #f2f2f2;
+  /* background: linear-gradient(-135deg, #c850c0, #4158d0); */
 }
-.button-box
-{
-	width: 220px;
-	margin:30px auto;
-	position:relative;
-	box-shadow: 0 0 20px 9px #f8f5f54f;
-	border-radius: 30px;
+::selection{
+  background: #4158d0;
+  color: #fff;
 }
-.toggle-btn
-{
-	padding:10px 30px;
-	cursor:pointer;
-	background: transparent;
-	border:0;
-	outline: none;
-	position: relative;
-	
+.wrapper{
+  width: 380px;
+  background: #fff;
+  border-radius: 15px;
+  box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
 }
-#btn
-{
-	top: 0;
-	left:0;
-	position: absolute;
-	width: 110px;
-	height: 100%;
-	background: #066aa4ba;
-	border-radius: 30px;
-	transition: .5s;
+.wrapper .title{
+  font-size: 35px;
+  font-weight: 600;
+  text-align: center;
+  line-height: 100px;
+  color: #fff;
+  user-select: none;
+  border-radius: 15px 15px 0 0;
+  background: linear-gradient(-135deg, #c850c0, #4158d0);
 }
-.input-group-login
-{
-	top: 115px;
-	position:absolute;
-	width:280px;
-	transition:.5s;
+.wrapper form{
+  padding: 10px 30px 50px 30px;
 }
-.input-group-register
-{
-    top: 115px;
-	position:absolute;
-	width:280px;
-	transition:.5s;
+.wrapper form .field{
+  height: 50px;
+  width: 100%;
+  margin-top: 20px;
+  position: relative;
 }
-.input-field
-{
-	width: 100%;
-	padding:7px 0;
-	margin:4px 0;
-	border-left:0;
-	border-top:0;
-	border-right:0;
-	border-bottom: 1px solid white;
-	outline:none;
-	background: transparent;
-	color: white;
+.wrapper form .field input{
+  height: 100%;
+  width: 100%;
+  outline: none;
+  font-size: 17px;
+  padding-left: 20px;
+  border: 1px solid lightgrey;
+  border-radius: 25px;
+  transition: all 0.3s ease;
 }
-.submit-btn
-{
-	width: 85%;
-	padding: 10px 30px;
-	cursor: pointer;
-	display: block;
-	margin: auto;
-	background: #066aa4ba;
-	box-shadow: 0 0 20px 9px #f8f5f54f;
-	border: 0;
-	outline: none;
-	border-radius: 30px;
+.wrapper form .field input:focus,
+form .field input:valid{
+  border-color: #4158d0;
 }
-.check-box
-{
-	margin: 30px 10px 34px 0;
+.wrapper form .field label{
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  color: #999999;
+  font-weight: 400;
+  font-size: 17px;
+  pointer-events: none;
+  transform: translateY(-50%);
+  transition: all 0.3s ease;
 }
-span
-{
-	color:black;
-	font-size:12px;
-	bottom:68px;
-	position:absolute;
+form .field input:focus ~ label,
+form .field input:valid ~ label{
+  top: 0%;
+  font-size: 16px;
+  color: #4158d0;
+  background: #fff;
+  transform: translateY(-50%);
 }
-#login
-{
-	left:50px;
+form .content{
+  display: flex;
+  width: 100%;
+  height: 50px;
+  font-size: 16px;
+  align-items: center;
+  justify-content: space-around;
 }
-#login input
-{
-	color:black;
-	font-size:15;
+form .content .checkbox{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-#register
-{
-	left:450px;
-
+form .content input{
+  width: 15px;
+  height: 15px;
+  background: red;
 }
-#register input
-{
-	color:black;
-	font-size: 15;
+form .content label{
+  color: #262626;
+  user-select: none;
+  padding-left: 5px;
+}
+form .content .pass-link{
+  color: "";
+}
+form .field input[type="submit"]{
+  color: #fff;
+  border: none;
+  padding-left: 0;
+  margin-top: -10px;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
+  background: linear-gradient(-135deg, #c850c0, #4158d0);
+  transition: all 0.3s ease;
+}
+form .field input[type="submit"]:active{
+  transform: scale(0.95);
+}
+form .signup-link{
+  color: #262626;
+  margin-top: 20px;
+  text-align: center;
+}
+form .pass-link a,
+form .signup-link a{
+  color: #4158d0;
+  text-decoration: none;
+}
+form .pass-link a:hover,
+form .signup-link a:hover{
+  text-decoration: underline;
 }
