--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -9,7 +9,7 @@
 }
 .navbar-light .navbar-nav .nav-link.active-link
 {
-    color: black;
+    color: white;
     text-decoration: underline;
 	font-weight: bold;
 
