--- a/src/app/components/acceuil/acceuil.component.css
+++ b/src/app/components/acceuil/acceuil.component.css
@@ -51,7 +51,7 @@ html {
     margin-top: 50px;
     text-transform: uppercase;
     font-weight: bold;
-    color: rgb(243, 141, 7);
+    color: #FFA500;
     font-size: 25px;
 }
 
