--- a/src/app/components/registrer/registrer.component.html
+++ b/src/app/components/registrer/registrer.component.html
@@ -1,57 +1,53 @@
 <app-navbar></app-navbar>
 <body>
     <div class="container">
-      <div class="title">Registration</div>
+      <div class="title">S'inscrire</div>
       <div class="content">
         <form action="#">
           <div class="user-details">
             <div class="input-box">
-              <span class="details">Full Name</span>
-              <input type="text" placeholder="Enter your name" required>
+              <span class="details">Nom </span>
+              <input type="text" placeholder="Entrer votre nom" required>
             </div>
             <div class="input-box">
-              <span class="details">Username</span>
-              <input type="text" placeholder="Enter your username" required>
+              <span class="details">Prénom</span>
+              <input type="text" placeholder="Entrer votre prénom" required>
             </div>
             <div class="input-box">
               <span class="details">Email</span>
-              <input type="text" placeholder="Enter your email" required>
+              <input type="email" placeholder="Entrer votre email" required>
             </div>
             <div class="input-box">
-              <span class="details">Phone Number</span>
-              <input type="text" placeholder="Enter your number" required>
+              <span class="details">Numéro apogée</span>
+              <input type="number" placeholder="Entrer votre numéro apogée" required>
             </div>
             <div class="input-box">
-              <span class="details">Password</span>
-              <input type="text" placeholder="Enter your password" required>
+              <span class="details">Mot de passe</span>
+              <input type="password" placeholder="Entree votre mot de passe" required>
             </div>
             <div class="input-box">
-              <span class="details">Confirm Password</span>
-              <input type="text" placeholder="Confirm your password" required>
+              <span class="details">Confirmer mot de passe</span>
+              <input type="password" placeholder="Confirmer votre mot de passe" required>
             </div>
           </div>
           <div class="gender-details">
             <input type="radio" name="gender" id="dot-1">
             <input type="radio" name="gender" id="dot-2">
             <input type="radio" name="gender" id="dot-3">
-            <span class="gender-title">Gender</span>
+            <span class="gender-title">Genre</span>
             <div class="category">
               <label for="dot-1">
               <span class="dot one"></span>
-              <span class="gender">Male</span>
+              <span class="gender">Proffesseur</span>
             </label>
             <label for="dot-2">
               <span class="dot two"></span>
-              <span class="gender">Female</span>
+              <span class="gender">Etudiant</span>
             </label>
-            <label for="dot-3">
-              <span class="dot three"></span>
-              <span class="gender">Prefer not to say</span>
-              </label>
             </div>
           </div>
           <div class="button">
-            <input type="submit" value="Register">
+            <input type="submit" value="S'inscrire">
           </div>
         </form>
       </div>
