--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -15,7 +15,7 @@
 
 }
 .container-fluid{
-	background-color: rgb(243, 141, 7);
+	background-color: #FFA500;
 	font-size: 20px;
 	font-family:'Poppins', sans-serif;
 	height: 5%;
