--- a/src/app/components/registrer/registrer.component.css
+++ b/src/app/components/registrer/registrer.component.css
@@ -11,7 +11,8 @@ body{
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background: linear-gradient(135deg, #71b7e6, #9b59b6);
+  background: linear-gradient(135deg, rgb(121,120,120), #f0b851);
+
 }
 .container{
   max-width: 700px;
@@ -20,6 +21,7 @@ body{
   padding: 25px 30px;
   border-radius: 5px;
   box-shadow: 0 5px 10px rgba(0,0,0,0.15);
+  backdrop-filter: blur(10px);
 }
 .container .title{
   font-size: 25px;
@@ -34,7 +36,7 @@ body{
   height: 3px;
   width: 30px;
   border-radius: 5px;
-  background: linear-gradient(135deg, #71b7e6, #9b59b6);
+  background: linear-gradient(135deg, rgb(121,120,120), #FFA500);
 }
 .content form .user-details{
   display: flex;
@@ -51,6 +53,7 @@ form .input-box span.details{
   font-weight: 500;
   margin-bottom: 5px;
 }
+
 .user-details .input-box input{
   height: 45px;
   width: 100%;
@@ -114,11 +117,11 @@ form .input-box span.details{
    letter-spacing: 1px;
    cursor: pointer;
    transition: all 0.3s ease;
-   background: linear-gradient(135deg, #71b7e6, #9b59b6);
+   background: linear-gradient(135deg, #FFA500, #FFA500);
  }
  form .button input:hover{
   /* transform: scale(0.99); */
-  background: linear-gradient(-135deg, #71b7e6, #9b59b6);
+  background: linear-gradient(-135deg, rgb(121,120,120), #FFA500);
   }
  @media(max-width: 584px){
  .container{
