--- a/src/app/components/acceuil/acceuil.component.html
+++ b/src/app/components/acceuil/acceuil.component.html
@@ -12,7 +12,7 @@
           <!-- section a propos -->
            <section id="a-propos">
               <div>
-                  <p class="tittle-section">Présentation</p>
+                  <p class="tittle-section">Presentation</p>
                   <div class="description-photo">
                     <div class="desc">
                         Notre site ".............." a été crée a fin de donner un coup de main
@@ -26,9 +26,10 @@
                             <li>Sciences de la Matière Chimie (SMC).</li>
                             <li>Sciences de la Vie (SVI).</li>
                             <li>Sciences de la Terre et de l'Univers (STU).</li>
-                         </ul>                                                 
-                    </div>
+                         </ul>   
+                         </div>                                              
                       <img src="/assets/photos/graduation.jpg" >
+                      
                   </div>
               </div>
               <p class="tittle-section">Suivez-nous</p>
