--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -6,12 +6,12 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-html,body{
+body{
   display: grid;
   height: 100%;
   width: 100%;
   place-items: center;
-  background: #f2f2f2;
+  background: linear-gradient(135deg, rgb(121,120,120), #f0b851);
   /* background: linear-gradient(-135deg, #c850c0, #4158d0); */
 }
 ::selection{
@@ -19,12 +19,13 @@ html,body{
   color: #fff;
 }
 .wrapper{
-  width: 380px;
+  width: 500px;
   background: #fff;
   border-radius: 15px;
   box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
   margin-top: 5%;
-  margin-bottom: 12%;
+  margin-bottom: 9.75%;
+  height: 65%;
 }
 .wrapper .title{
   font-size: 35px;
@@ -34,7 +35,7 @@ html,body{
   color: #fff;
   user-select: none;
   border-radius: 15px 15px 0 0;
-  background: linear-gradient(-135deg, rgb(121,120,120), #FFA500);
+  background:  #FFA500;
 }
 .wrapper form{
   padding: 0px 30px 50px 30px;
@@ -42,7 +43,7 @@ html,body{
 .wrapper form .field{
   height: 50px;
   width: 100%;
-  margin-top: 20px;
+  margin-top: 25px;
   position: relative;
 }
 .wrapper form .field input{
@@ -85,6 +86,7 @@ form .content{
   font-size: 16px;
   align-items: center;
   justify-content: space-around;
+  margin-top: 5%;
 }
 form .content .checkbox{
   display: flex;
@@ -104,7 +106,7 @@ form .content label{
 form .content .pass-link{
   color: "";
 }
-form .field input[type="submit"]{
+form .field input[type="Submit"]{
   color: #fff;
   border: none;
   padding-left: 0;
@@ -112,8 +114,12 @@ form .field input[type="submit"]{
   font-size: 20px;
   font-weight: 500;
   cursor: pointer;
-  background: linear-gradient(-135deg, rgb(121,120,120), #FFA500);
+  background: linear-gradient(-135deg,#FFA500, #FFA500);
   transition: all 0.3s ease;
+}
+form .field input[type="Submit"]:hover{
+  background: linear-gradient(-135deg, rgb(121,120,120), #FFA500);
+
 }
 form .field input[type="submit"]:active{
   transform: scale(0.95);
@@ -125,7 +131,7 @@ form .signup-link{
 }
 form .pass-link a,
 form .signup-link a{
-  color: #4158d0;
+  color: black;
   text-decoration: none;
 }
 form .pass-link a:hover,
