--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -23,10 +23,10 @@
                     <a class="nav-link" routerLink="/" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">FILIERES</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" routerLink="/contact" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">CONTACTE</a>
+                    <a class="nav-link" routerLink="/contact" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">CONTACT</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" routerLink="/login" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">CONNECTER</a>
+                    <a class="nav-link" routerLink="/login" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">SE CONNECTER</a>
                   </li>
                 </ul>
               </div>
