--- a/src/app/components/registrer/registrer.component.html
+++ b/src/app/components/registrer/registrer.component.html
@@ -23,7 +23,7 @@
             </div>
             <div class="input-box">
               <span class="details">Mot de passe</span>
-              <input type="password" placeholder="Entree votre mot de passe" required>
+              <input type="password" placeholder="Entrer votre mot de passe" required>
             </div>
             <div class="input-box">
               <span class="details">Confirmer mot de passe</span>
@@ -38,7 +38,7 @@
             <div class="category">
               <label for="dot-1">
               <span class="dot one"></span>
-              <span class="gender">Proffesseur</span>
+              <span class="gender">Professeur</span>
             </label>
             <label for="dot-2">
               <span class="dot two"></span>
@@ -49,6 +49,7 @@
           <div class="button">
             <input type="submit" value="S'inscrire">
           </div>
+          <div class="signup-link"> <a routerLink="/login">Se connecter</a></div>
         </form>
       </div>
     </div>
