--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,13 +1,13 @@
 <app-navbar></app-navbar>
-<div class="container1" style="background-image: url(assets/photos/p3.jpeg)">
+<div class="container1" >
     <form>
         <h1>CONTACTEZ-NOUS</h1>
         <input type="text" id="nom" placeholder="Nom" required>
-        <input type="text" id="prenom" placeholder="Prenom" required>
+        <input type="text" id="prenom" placeholder="Prénom" required>
         <input type="email" id="email" placeholder="Email" required>
-        <input type="text" id="numero apogee" placeholder="Numero apogee" required>
+        <input type="number" id="numero apogee" placeholder="Numéro apogée" required>
         <h4>Votre message</h4>
         <textarea required></textarea>
-        <input type="submit" value="Send" id="button">
+        <input type="submit" value="Envoyer" id="button">
     </form>
 </div>
