--- a/src/app/components/registrer/registrer.component.css
+++ b/src/app/components/registrer/registrer.component.css
@@ -6,7 +6,7 @@
   font-family: 'Poppins',sans-serif;
 }
 body{
-  height: 100vh;
+  height: 91.1vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,6 +23,7 @@ body{
   box-shadow: 0 5px 10px rgba(0,0,0,0.15);
   backdrop-filter: blur(10px);
 }
+
 .container .title{
   font-size: 25px;
   font-weight: 500;
@@ -67,7 +68,7 @@ form .input-box span.details{
 }
 .user-details .input-box input:focus,
 .user-details .input-box input:valid{
-  border-color: #9b59b6;
+  border-color: #FFA500;
 }
  form .gender-details .gender-title{
   font-size: 20px;
@@ -96,7 +97,7 @@ form .input-box span.details{
  #dot-1:checked ~ .category label .one,
  #dot-2:checked ~ .category label .two,
  #dot-3:checked ~ .category label .three{
-   background: #9b59b6;
+   background: #FFA500;
    border-color: #d9d9d9;
  }
  form input[type="radio"]{
@@ -146,4 +147,18 @@ form .user-details .input-box{
   .container .content .category{
     flex-direction: column;
   }
+}
+form .signup-link{
+  color: black;
+  margin-top: 20px;
+  text-align: center;
+}
+form .pass-link a,
+form .signup-link a{
+  color: black;
+  text-decoration: none;
+}
+form .pass-link a:hover,
+form .signup-link a:hover{
+  text-decoration: underline;
 }
