--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,10 +17,10 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link" routerLink="/Acceuil"  routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">ACCEUIL</a>
+                    <a class="nav-link" routerLink="/"  routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">ACCEUIL</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" routerLink="/" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">FILIERES</a>
+                    <a class="nav-link" routerLink="/filieres" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">FILIERES</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" routerLink="/contact" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">CONTACT</a>
