--- a/src/app/components/filieres/filieres.component.html
+++ b/src/app/components/filieres/filieres.component.html
@@ -115,9 +115,7 @@
                 La filière Sciences de la Terre et de l’Univers (STU) constituent un champ de savoir 
                et un ensemble de pratiques qui s’enracinent dans l’histoire naturelle. En se centrant sur des problèmes
                et des objets spécifiques, elles se sont développées en se diversifiant en de nombreuses disciplines 
-               et sous-disciplines : astronomie, cosmologie, géologie, climatologie, etc. Certaines sont porteuses de 
-               débats sur les relations science-métaphysique et science-religions, d’autres se voient de plus en plus 
-               associées à des questions sociétales (environnement, risques naturels, etc.).
+               et sous-disciplines : astronomie, cosmologie, géologie, climatologie, etc. 
               </p>
               <a href="http://www.fst.ac.ma/site/sites/default/files/Filiere_STU_2014_0.pdf" class="blog-post__cta">Lire plus</a>
             </div>
