--- a/src/app/components/acceuil/acceuil.component.html
+++ b/src/app/components/acceuil/acceuil.component.html
@@ -11,7 +11,7 @@
       
           <!-- section a propos -->
            <section id="a-propos">
-              <div>
+              <div class="presentation">
                   <p class="tittle-section">Presentation</p>
                   <div class="description-photo">
                     <div class="desc">
