--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,6 @@
-<app-navbar></app-navbar> 
+<header>
+  <app-navbar></app-navbar>
+</header>
 <body>
     <div class="wrapper">
       <div class="title">Se connecter</div>
