--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -23,7 +23,7 @@
         <div class="field">
           <input type="submit" value="Se Connecter">
         </div>
-        <div class="signup-link"> <a routerLink="/register">S'inscrire</a></div>
+        <div class="signup-link"> <a routerLink="/registrer">S'inscrire</a></div>
       </form>
     </div>
    
